--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -11,7 +11,7 @@
 title: XinSong Lab
 
 #baseURL: 'https://example.com/' # Website URL
-baseURL: 'https://XinSong-lab.github.io/' # Website URL
+baseURL: 'https://cancms.github.io/xinsong/' # Website URL
 
 ############################
 ## LANGUAGE
