--- a/config/_default/menus.en.yaml
+++ b/config/_default/menus.en.yaml
@@ -18,12 +18,12 @@ main:
     weight: 30
 
   - name: Publications
-    url: publication
+    url: publications
     weight: 40
 
 
   - name: News
-    url: event
+    url: news
     weight: 50
 
 #  - name: Courses
