--- a/data/themes/cityu.toml
+++ b/data/themes/cityu.toml
@@ -3,13 +3,13 @@ name = "Iirl"
 
 [light]
   # Primary
-  primary = "#1565c0"
+  primary = "#bf165e"
 
   # Menu
   menu_primary = "#fff"
-  menu_text = "#e3e3e3"
-  menu_text_active = "#1565c0"
-  menu_title = "#2b2b2b"
+  menu_text = "#6b203e"
+  menu_text_active = "#bf165e"
+  menu_title = "#bf165e"
 
   # Home sections
   home_section_odd = "rgb(255, 255, 255)"
